<resources>
    <string name="app_name">Connect</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_error">Error!</string>
    <string name="verify_text">Verify phone number</string>
    <string name="verify_info_text">We will send an SMS to verify your phone number, please enter your country code and phone number</string>
    <string name="phone_hint_text">+201012345678</string>
    <string name="submit_btn_text">Submit</string>
    <string name="logo_pic">logo</string>
    <string name="phone_input_error">phone number is required!</string>
    <string name="country_code_input_error">country code is required!</string>
    <string name="verification_code_text">Enter Verification Code</string>
    <string name="code_hint">123456</string>
    <string name="resend">Resend</string>
    <string name="invalid_number">Invalid phone number.</string>
    <string name="quota_exceeded">Quota exceeded.</string>
    <string name="time_out">time out!</string>
    <string name="verification_failed">Verification Failed!</string>
    <string name="wait">please wait…</string>
    <string name="activating_account">Activating Account</string>
    <string name="welcome_text">Welcome to Connect</string>
    <string name="next_text">Next</string>
    <string name="next">Next</string>
    <string name="username_hint">username</string>
    <string name="empty_button">empty button</string>
    <string name="user_avatar">user avatar</string>
    <string name="ask_for_permission">You should grant permission to proceed</string>
    <string name="upload_image">upload image</string>
    <string name="avatar_empty">user avatar is required!</string>
    <string name="user_name_empty">User name is Required!</string>
    <string name="status_empty">Status is Required!</string>
    <string name="firebase_database_ref">gs://connectapp-ffaec.appspot.com</string>
    <string name="firebase_storage_url">gs://connectapp-ffaec.appspot.com/</string>
    <string name="update_name">updating name</string>
    <string name="new_user">Add new User</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="change_number">Change Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="later">later</string>
    <string name="delete_account_msg">Are you sure you want to delete your account?</string>
    <string name="input_prefill" />
    <string name="new_phone">put your new phone number</string>
    <string name="default_notification_channel_id">Hazem</string>
    <string name="status_hint">Available</string>
    <string name="status_text">Status</string>
    <string name="name_text">Name</string>
    <string name="profile_text">Profile</string>
    <string name="phone_text">Phone Number</string>
    <string name="profile_data">Profile Data</string>
    <string name="no_contacts">You don\'t have any contact in your device that uses connect app</string>
    <string name="online_status">online status</string>
    <string name="last_seen">last seen</string>
    <string name="add_file">add image file</string>
    <string name="type_a_message">type a message..</string>
    <string name="send">send</string>
    <string name="image_msg">msg image</string>
    <string name="hello_message">hello!</string>
    <string name="online_now">Online now</string>
    <string name="no_new_message">There\'s no new messages for you!</string>
    <string name="last_time_text">timestamp</string>
    <string name="error_load_image">can\'t load image probably</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="save">Save</string>

</resources>
