<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.connectapp.activities.SignInActivity">

    <TextView
        android:id="@+id/verify_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/verify_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/verify_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/verify_info_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/phone_input_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_content_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/phone_hint_text"
        android:inputType="phone"
        android:maxLength="15"
        android:maxLines="1" />

    <Button
        android:id="@+id/submit_number_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_input_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/setting_btn_selector"
        android:text="@string/submit_btn_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_number_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/verification_code_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/code_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_tv"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/code_hint"
        android:maxLength="6"
        android:maxLines="1" />

    <TextView
        android:id="@+id/timer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/resend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/setting_btn_selector"
        android:text="@string/resend"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
</RelativeLayout>
