<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/app_bar_layout" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <FrameLayout
            android:id="@+id/avatar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/pick_image_btn"
                android:layout_width="@dimen/widget_size"
                android:layout_height="@dimen/widget_size"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_button" />

            <ImageView
                android:id="@+id/user_avatar_iv"
                android:layout_width="@dimen/widget_size"
                android:layout_height="@dimen/widget_size"
                android:contentDescription="@string/user_avatar"
                android:src="@drawable/ic_place_holder" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar_layout"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/user_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/status_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status_hint" />
        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/setting_btn_selector"
            android:text="@string/save"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </RelativeLayout>
</RelativeLayout>


