<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.connectapp.activities.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_tv"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".5">

            <ImageButton
                android:id="@+id/pick_image_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_button" />

            <ImageView
                android:id="@+id/user_avatar_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_avatar"
                android:src="@drawable/ic_place_holder" />
        </FrameLayout>


        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:hint="@string/username_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/setting_btn_selector"
        android:text="@string/next"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
</RelativeLayout>
