<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_place_holder"
        android:backgroundTint="#000"
        android:contentDescription="@string/user_avatar" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_avatar"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/user_avatar"
        android:layout_toRightOf="@+id/user_avatar"
        android:text="@string/username_hint"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name_tv"
        android:layout_alignStart="@+id/user_name_tv"
        android:layout_below="@+id/user_name_tv"
        android:layout_marginTop="11dp"
        android:text="@string/status_text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/user_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/user_name_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/user_name_tv"
        android:layout_toRightOf="@+id/user_name_tv"
        android:contentDescription="@string/online_status"
        android:src="@mipmap/ic_online" />
</RelativeLayout>