<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/app_bar_layout" />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">


        <ImageView
            android:id="@+id/user_avatar_iv"
            android:layout_width="@dimen/widget_size"
            android:layout_height="@dimen/widget_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_avatar_iv"
            android:layout_marginTop="64dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/status_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_text"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/status_hint"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_tv"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/phone_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/phone_hint_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


        <ImageButton
            android:id="@+id/send_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phone_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_message"
            android:contentDescription="@string/send" />
    </RelativeLayout>


</RelativeLayout>


